syntax = "proto3";

package daikombat.dto;

option java_multiple_files = true;
option java_package = "com.beverly.hills.money.gang.proto";

message ServerEvents {

  optional int64 eventId = 1;
  optional int32 playersOnline = 2;
  optional Error error = 3;
  optional bytes hmac = 4;

  oneof events {
    ChatEvent chatEvents = 5;
    GameEvents gameEvents = 6;
  }

  message Error {
    int32 errorCode = 1;
    string message = 2;
  }

  message ChatEvents {
    repeated ChatEvent events = 1;
  }

  message GameEvents {
    repeated GameEvent events = 1;
  }

  message ChatEvent {
    string playerName = 1;
    string message = 2;
  }

  message GameEvent {
    GameEventPlayerStats player = 1;
    optional GameEventPlayerStats affectedPlayer = 2;
    GameEvent eventType = 3;

    enum GameEventType {
      MOVE = 0;
      SHOOT = 1;
      GET_SHOT = 2;
      DEATH = 3;
      SPAWN = 4;
      DISCONNECT = 5;
    }
  }

  message GameEventPlayerStats {
    int32 playerId = 1;
    optional string playerName = 2;
    Vector position = 3;
    Vector direction = 4;
    int32 health = 5;
  }

  message Vector {
    float x = 1;
    float y = 2;
  }
}